FAISS Database Created

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -10,37 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dbae32c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.schema import Document\n",
     "\n",
-    "from langchain_google_genai import GoogleGenerativeAI\n",
+    "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
     "import google.generativeai  as genai\n",
     "\n",
     "import faiss\n",
     "import numpy as np\n",
     "\n",
-    "from sentence_transformers import SentenceTransformer\n",
-    "\n",
     "import nltk\n",
-    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import sent_tokenize\n",
     "\n",
     "import os\n",
     "import pickle\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
-    "from dotenv import load_dotenv\n",
     "\n",
     "import glob\n",
     "from datetime import datetime\n",
     "\n",
-    "import re"
+    "import re\n",
+    "import json"
    ]
   },
   {
@@ -280,7 +275,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading Documents: 100%|██████████| 4/4 [02:07<00:00, 31.81s/it]"
+      "Loading Documents: 100%|██████████| 4/4 [01:17<00:00, 19.47s/it]"
      ]
     },
     {
@@ -631,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "cec0ea5e",
    "metadata": {},
    "outputs": [],
@@ -677,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "63263ff3",
    "metadata": {},
    "outputs": [],
@@ -715,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "a2293e71",
    "metadata": {},
    "outputs": [
@@ -723,7 +718,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing documents: 100%|██████████| 4/4 [00:00<00:00,  5.99it/s]"
+      "Processing documents: 100%|██████████| 4/4 [00:00<00:00,  7.65it/s]"
      ]
     },
     {
@@ -755,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "2a332187",
    "metadata": {},
    "outputs": [],
@@ -765,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "3d86056d",
    "metadata": {},
    "outputs": [],
@@ -794,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "8ab0bae6",
    "metadata": {},
    "outputs": [
@@ -1804,7 +1799,7 @@
        " ...]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1816,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "a17776bc",
    "metadata": {},
    "outputs": [],
@@ -1847,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "c89be025",
    "metadata": {},
    "outputs": [
@@ -1876,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "da313720",
    "metadata": {},
    "outputs": [],
@@ -1897,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "115ad266",
    "metadata": {},
    "outputs": [
@@ -1940,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "1fe6ae59",
    "metadata": {},
    "outputs": [],
@@ -1963,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "43dd48a0",
    "metadata": {},
    "outputs": [
@@ -1983,9 +1978,441 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83222a79",
+   "metadata": {},
+   "source": [
+    "# Embedding Generation and FAISS Database Creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b9141522",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_gemini_embeddings():\n",
+    "    \"Initialize GEMINI Embeddings model\"\n",
+    "    try:\n",
+    "        embedding_model = GoogleGenerativeAIEmbeddings(\n",
+    "            model = 'models/embedding-001',\n",
+    "            google_api_key = GEMINI_API_KEY,\n",
+    "            output_dimensionality=1536\n",
+    "        )\n",
+    "\n",
+    "        test_embeddings = embedding_model.embed_query(\"This is a test sentence.\")\n",
+    "        embedding_dimension = len(test_embeddings)\n",
+    "\n",
+    "        print(f\"✅ Gemini embedding initialized !\")\n",
+    "        print(f\"Embedding dimension: {embedding_dimension}\")\n",
+    "        return embedding_model, embedding_dimension\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Failed to initialize Gemini embeddings: {e}\")\n",
+    "        return None, None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "87184b09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Gemini embedding initialized !\n",
+      "Embedding dimension: 768\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedding_model, embedding_dim = initialize_gemini_embeddings()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "873a3582",
+   "metadata": {},
+   "source": [
+    "# Batch Embedding Generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a11418bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_embeddings_batch(chunks, embeddings_model, batch_size = 50):\n",
+    "    \"Generate embeddings for chunks in batches\"\n",
+    "    all_embeddings = []\n",
+    "    total_batches = (len(chunks) + batch_size - 1) // batch_size\n",
+    "\n",
+    "    print(f\"Generating embeddings for {len(chunks)} chunks in {total_batches} batches...\")\n",
+    "\n",
+    "    for i in tqdm(range(0, len(chunks), batch_size), desc = \"Embedding batches\"):\n",
+    "        batch_chunks = chunks[i:i + batch_size]\n",
+    "\n",
+    "        try:\n",
+    "            # Generate embeddings for batch\n",
+    "            batch_embeddings = embeddings_model.embed_documents(batch_chunks)\n",
+    "            all_embeddings.extend(batch_embeddings)\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error in batch {i//batch_size + 1}: {e}\")\n",
+    "            # Add empty Embeddings as placeholder\n",
+    "            all_embeddings.extend([None] * len(batch_chunks))\n",
+    "    print(f\"✅ Generated {len(all_embeddings)} embeddings\")\n",
+    "    return all_embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "82708eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating embeddings for 12561 chunks in 252 batches...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Embedding batches:  67%|██████▋   | 169/252 [08:06<04:26,  3.21s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in batch 170: 'utf-8' codec can't encode character '\\ud835' in position 384: surrogates not allowed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Embedding batches:  75%|███████▌  | 190/252 [09:04<02:57,  2.86s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in batch 191: 'utf-8' codec can't encode character '\\ud835' in position 123: surrogates not allowed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Embedding batches:  76%|███████▌  | 192/252 [09:07<02:12,  2.21s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in batch 193: 'utf-8' codec can't encode character '\\ud835' in position 563: surrogates not allowed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Embedding batches:  84%|████████▍ | 212/252 [09:51<01:32,  2.32s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in batch 213: 'utf-8' codec can't encode character '\\ud835' in position 240: surrogates not allowed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Embedding batches: 100%|██████████| 252/252 [11:32<00:00,  2.75s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Generated 12561 embeddings\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chunk_embeddings = generate_embeddings_batch(all_chunks, embedding_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dee3e1c6",
+   "metadata": {},
+   "source": [
+    "# FAISS Database Creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1fcd5ecb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_faiss_index(embeddings, embedding_dimensions):\n",
+    "    \"Create and populate FAISS index\"\n",
+    "\n",
+    "    # Fileter out None embeddings (failed embeddings)\n",
+    "    valid_embeddings = [emb for emb in embeddings if emb is not None]\n",
+    "    valid_indices = [i for i, emb in enumerate(embeddings) if emb is not None]\n",
+    "\n",
+    "    print(f\"Creating FAISS index with {len(valid_embeddings)} valid embeddings\")\n",
+    "\n",
+    "    # Create FAISS index (Inner product for cosine similarity)\n",
+    "    index = faiss.IndexFlatIP(embedding_dimensions)\n",
+    "\n",
+    "    # Convert to numpy index and normalize for cosine similarity\n",
+    "    embeddings_array = np.array(valid_embeddings).astype('float32')\n",
+    "    faiss.normalize_L2(embeddings_array)\n",
+    "\n",
+    "    # Add embeddings to index\n",
+    "    index.add(embeddings_array)\n",
+    "\n",
+    "    print(f\"✅ FAISS index created with {index.ntotal} vectors\")\n",
+    "    return index, valid_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1d9147fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating FAISS index with 12361 valid embeddings\n",
+      "✅ FAISS index created with 12361 vectors\n"
+     ]
+    }
+   ],
+   "source": [
+    "faiss_index, valid_chunk_indices = create_faiss_index(chunk_embeddings, embedding_dim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f304dd2",
+   "metadata": {},
+   "source": [
+    "# Test Retrival System"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d49dc66d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔍 QUERY: What is machine learning?\n",
+      "📊 Retrieved 5 chunks:\n",
+      "\n",
+      "--- RESULT 1 (Score: 0.745) ---\n",
+      "Source: Hands_On_Machine_Learning_with_Scikit_Learn_and_TensorFlow.pdf\n",
+      "Content: Machine Learning is the science (and art) of programming computers so they can learn from data. Here is a slightly more general definition: [Machine Learning is the] field of study that gives computer...\n",
+      "\n",
+      "--- RESULT 2 (Score: 0.743) ---\n",
+      "Source: understanding-machine-learning-theory-algorithms.pdf\n",
+      "Content: We are surrounded by a machine learning based technology: search engines learn how to bring us the best results (while placing proﬁtable ads), anti-spam software learns to ﬁlter our email messages, an...\n",
+      "\n",
+      "--- RESULT 3 (Score: 0.740) ---\n",
+      "Source: understanding-machine-learning-theory-algorithms.pdf\n",
+      "Content: In a sense, machine learning can be viewed as a branch of AI (Artiﬁcial Intelligence), since, after all, the ability to turn expe- rience into expertise or to detect meaningful patterns in complex sen...\n",
+      "\n",
+      "--- RESULT 4 (Score: 0.739) ---\n",
+      "Source: understanding-machine-learning-theory-algorithms.pdf\n",
+      "Content: However, one should note that, in contrast with traditional AI, machine learning is not trying to build automated imitation of intelligent behavior, but rather to use the strengths and 1.5 How to Read...\n",
+      "\n",
+      "--- RESULT 5 (Score: 0.736) ---\n",
+      "Source: Deep Learning by Ian Goodfellow, Yoshua Bengio, Aaron Courville.pdf\n",
+      "Content: 5.1 Learning Algorithms A machine learning algorithm is an algorithm that is able to learn from data. But what do we mean by learning? Mitchell 1997( ) provides the deﬁnition “A computer program is sa...\n",
+      "\n",
+      "\n",
+      "🔍 QUERY: How do neural networks work?\n",
+      "📊 Retrieved 5 chunks:\n",
+      "\n",
+      "--- RESULT 1 (Score: 0.746) ---\n",
+      "Source: Deep Learning by Ian Goodfellow, Yoshua Bengio, Aaron Courville.pdf\n",
+      "Content: The training examples specify directly what the output layer must do at each point x; it must produce a value that is close to y. The behavior of the other layers is not directly speciﬁed by the train...\n",
+      "\n",
+      "--- RESULT 2 (Score: 0.739) ---\n",
+      "Source: Deep Learning by Ian Goodfellow, Yoshua Bengio, Aaron Courville.pdf\n",
+      "Content: An individual neuron or small collection of neurons is not particularly useful. Biological neurons are not especially densely connected. As seen in ﬁgure ,1.10 our machine learning models have had a n...\n",
+      "\n",
+      "--- RESULT 3 (Score: 0.737) ---\n",
+      "Source: Bishop-Pattern-Recognition-and-Machine-Learning-2006.pdf\n",
+      "Content: In a Bayesian neural network, the prior distribution over the parameter vector w, in conjunction with the network function f(x,w), produces a prior distribution over functions from y(x) where y is the...\n",
+      "\n",
+      "--- RESULT 4 (Score: 0.734) ---\n",
+      "Source: Deep Learning by Ian Goodfellow, Yoshua Bengio, Aaron Courville.pdf\n",
+      "Content: Each unit resembles a neuron in the sense that it receives input from many other units and computes its own activation value. The idea of using many layers of vector-valued representation is drawn fro...\n",
+      "\n",
+      "--- RESULT 5 (Score: 0.733) ---\n",
+      "Source: Deep Learning by Ian Goodfellow, Yoshua Bengio, Aaron Courville.pdf\n",
+      "Content: Finally, these networks are called neural because they are loosely inspired by neuroscience. Each hidden layer of the network is typically vector-valued. The dimensionality of these hidden layers dete...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_faiss_retrieval(query, faiss_index, embeddings_model, chunks, metadata, valid_indices, k=5):\n",
+    "    \"\"\"Test FAISS retrieval with a query\"\"\"\n",
+    "    \n",
+    "    # Generate query embedding\n",
+    "    query_embedding = embeddings_model.embed_query(query)\n",
+    "    query_vector = np.array([query_embedding]).astype('float32')\n",
+    "    faiss.normalize_L2(query_vector)\n",
+    "    \n",
+    "    # Search FAISS index\n",
+    "    scores, indices = faiss_index.search(query_vector, k)\n",
+    "    \n",
+    "    print(f\"\\n🔍 QUERY: {query}\")\n",
+    "    print(f\"📊 Retrieved {len(indices[0])} chunks:\\n\")\n",
+    "    \n",
+    "    results = []\n",
+    "    for i, (score, idx) in enumerate(zip(scores[0], indices[0])):\n",
+    "        if idx < len(valid_indices):\n",
+    "            original_idx = valid_indices[idx]\n",
+    "            chunk = chunks[original_idx]\n",
+    "            meta = metadata[original_idx]\n",
+    "            \n",
+    "            print(f\"--- RESULT {i+1} (Score: {score:.3f}) ---\")\n",
+    "            print(f\"Source: {meta['source_file']}\")\n",
+    "            print(f\"Content: {chunk[:200]}...\")\n",
+    "            print()\n",
+    "            \n",
+    "            results.append({\n",
+    "                'chunk': chunk,\n",
+    "                'metadata': meta,\n",
+    "                'score': score\n",
+    "            })\n",
+    "    \n",
+    "    return results\n",
+    "\n",
+    "# Test retrieval with sample queries\n",
+    "test_queries = [\n",
+    "    \"What is machine learning?\",\n",
+    "    \"How do neural networks work?\",\n",
+    "    \"What is backpropagation?\",\n",
+    "    \"Explain supervised learning\"\n",
+    "]\n",
+    "\n",
+    "for query in test_queries[:2]:  # Test first 2 queries\n",
+    "    results = test_faiss_retrieval(query, faiss_index, embedding_model, \n",
+    "                                 all_chunks, chunk_metadata, valid_chunk_indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71f5446e",
+   "metadata": {},
+   "source": [
+    "# Save FAISS Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f8218bba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_faiss_database(faiss_index, chunks, metadata, valid_indices, base_path = 'data/faiss_index'):\n",
+    "    \"Save FAISS index and associated data\"\n",
+    "\n",
+    "    # Create Directory\n",
+    "    Path(base_path).mkdir(parents = True, exist_ok = True)\n",
+    "\n",
+    "    # Save FAISS index\n",
+    "    faiss.write_index(faiss_index, f\"{base_path}/intellect_engine.index\")\n",
+    "\n",
+    "    # Save chunks and metadata\n",
+    "    with open(f\"{base_path}/chunks.pkl\", 'wb') as f:\n",
+    "        pickle.dump(chunks, f)\n",
+    "    \n",
+    "    with open(f\"{base_path}/metadata.pkl\", 'wb') as f:\n",
+    "        pickle.dump(metadata, f)\n",
+    "    \n",
+    "    with open(f\"{base_path}/valid_indices.pkl\", 'wb') as f:\n",
+    "        pickle.dump(valid_indices, f)\n",
+    "\n",
+    "    # Save index info\n",
+    "    index_info = {\n",
+    "        'total_chunks': len(chunks),\n",
+    "        'valid_chunks': len(valid_indices),\n",
+    "        'embedding_dimension': faiss_index.d,\n",
+    "        'index_type': 'IndexFlatIP',\n",
+    "        'created_at': datetime.now().isoformat()\n",
+    "    }\n",
+    "\n",
+    "    with open(f\"{base_path}/index_info.json\", 'w') as f:\n",
+    "        json.dump(index_info, f, indent = 2)\n",
+    "    \n",
+    "    print(f\"✅ FAISS database saved to {base_path}\")\n",
+    "    print(f\"   Index file: intellect_engine.index\")\n",
+    "    print(f\"   Total Vectors: {faiss_index.ntotal}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e91da24c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ FAISS database saved to data/faiss_index\n",
+      "   Index file: intellect_engine.index\n",
+      "   Total Vectors: 12361\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_faiss_database(faiss_index, all_chunks, chunk_metadata, valid_chunk_indices)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83222a79",
+   "id": "c1f0c4ac",
    "metadata": {},
    "outputs": [],
    "source": []
