RAG Config saved

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -3009,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "9fbf1de0",
    "metadata": {},
    "outputs": [
@@ -3018,7 +3018,7 @@
      "output_type": "stream",
      "text": [
       "IntellectEngine RAG system saved successfully!\n",
-      "Configuration: data/rag_config.json\n",
+      "Configuration: config/rag_config.json\n",
       "Test results: data/rag_test_results.pkl\n"
      ]
     }
@@ -3042,16 +3042,24 @@
     "        'faiss_index_size': faiss_index.ntotal\n",
     "    }\n",
     "    \n",
-    "    with open('data/rag_config.json', 'w') as f:\n",
+    "    with open('config/rag_config.json', 'w') as f:\n",
     "        json.dump(rag_config, f, indent=2)\n",
     "    \n",
     "    print(\"IntellectEngine RAG system saved successfully!\")\n",
-    "    print(f\"Configuration: data/rag_config.json\")\n",
+    "    print(f\"Configuration: config/rag_config.json\")\n",
     "    print(f\"Test results: data/rag_test_results.pkl\")\n",
     "\n",
     "# Save your complete system\n",
     "save_complete_rag_system()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e146ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
