Created Vector Store

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1987,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b9141522",
    "metadata": {},
    "outputs": [],
@@ -1997,8 +1997,7 @@
     "    try:\n",
     "        embedding_model = GoogleGenerativeAIEmbeddings(\n",
     "            model = 'models/embedding-001',\n",
-    "            google_api_key = GEMINI_API_KEY,\n",
-    "            output_dimensionality=1536\n",
+    "            google_api_key = GEMINI_API_KEY\n",
     "        )\n",
     "\n",
     "        test_embeddings = embedding_model.embed_query(\"This is a test sentence.\")\n",
