--- a/testing.ipynb
+++ b/testing.ipynb
@@ -3063,7 +3063,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "IntellectEngine",
    "language": "python",
    "name": "python3"
   },
